# bassmint

./: .gitignore  CMakeLists.txt  README.md
cmake/: teensy40.cmake
docs/: architecture.md  pitch_detection.md
hardware/: BOM.csv
hardware/schematics/: bassmint.kicad_pro  bassmint.kicad_sch  bassmint_symbols.kicad_sym
libs/: README.md
src/: main.cpp
src/app/: App.cpp  App.h  StringFretResolver.cpp  StringFretResolver.h
src/core/: NoteMapping.cpp  NoteMapping.h  NoteTables.cpp  NoteTables.h  Tuning.cpp  Tuning.h
src/dsp/: EnvelopeFollower.cpp  EnvelopeFollower.h  OctaveFretEstimator.cpp  OctaveFretEstimator.h  PitchDetector.cpp  PitchDetector.h  PitchDetectorYin.h  RingBuffer.h  StringActivity.cpp  StringActivity.h  StringProcessor.cpp  StringProcessor.h
src/hal/: AdcDriver.cpp  AdcDriver.h  BoardConfig.h  LedDriver.cpp  LedDriver.h  MidiOutput.cpp  MidiOutput.h
test/: CMakeLists.txt  TestOctaveFretEstimator.cpp
